chore: production deployment configuration and documentation
- Make API URL configurable via VITE_API_URL environment variable
- Update CORS config to use environment variable for allowed origins
- Create application-prod.properties for production settings
- Add .env.example files for frontend and backend
- Create comprehensive DEPLOYMENT.md guide
- Update README with production-ready instructions
- All builds pass successfully (mvn clean package, npm run build)
- Database schema fully configured with PostgreSQL